--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "zrb"
-version = "1.14.8"
+version = "1.15.0"
 description = "Your Automation Powerhouse"
 authors = ["Go Frendi Gunawan <gofrendiasgard@gmail.com>"]
 license = "AGPL-3.0-or-later"
@@ -56,8 +56,7 @@ pyjwt = "^2.10.1"
 # - We also need prompt-toolkit and rich which are included in pydantic ai's cli optional dependency
 pydantic-ai-slim = {extras = ["openai", "cohere", "vertexai", "google", "anthropic", "groq", "mistral", "bedrock", "huggingface", "cli", "mcp"], version = "^0.7.0"} 
 
-# NOTE: On Pydantic AI 0.6.2, The last working version of OpenAI is 1.99.1
-# openai = ">=1.92.0, <=1.99.1"
+# NOTE: On Pydantic AI 0.7.0, OpenAI is 1.99.2 to 1.99.6 seems to be broken
 openai = ">=1.99.7"
 
 tiktoken = "^0.8.0"
