--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,7 @@ tiktoken = "^0.8.0"
 playwright = {version = "^1.54.0", optional = true}
 chromadb = {version = "^0.6.3", optional = true}
 markdownify = "^1.2.0"
+pyjwt = "^2.10.1"
 
 [tool.poetry.extras]
 # poetry install -E rag
