--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "zrb"
-version = "1.15.16"
+version = "1.15.17"
 description = "Your Automation Powerhouse"
 authors = ["Go Frendi Gunawan <gofrendiasgard@gmail.com>"]
 license = "AGPL-3.0-or-later"
@@ -41,7 +41,6 @@ python = ">=3.10.0,<4.0.0"
 python-dotenv = "^1.1.1"
 black = "^25.1.0"
 isort = "^6.0.1"
-requests = "^2.32.4"
 libcst = "^1.8.2"
 beautifulsoup4 = "^4.13.4"
 pdfplumber = "^0.11.7"
@@ -51,9 +50,14 @@ ulid-py = "^1.1.0"
 psutil = "^7.0.0"
 
 # NOTE: Look at https://github.com/pydantic/pydantic-ai/blob/main/pydantic_ai_slim/pyproject.toml
-# - We want to include all models, as well as mcp capability.
-# - We also need prompt-toolkit and rich which are included in pydantic ai's cli optional dependency
-pydantic-ai-slim = {extras = ["openai", "cohere", "vertexai", "google", "anthropic", "groq", "mistral", "bedrock", "huggingface", "cli", "mcp"], version = "~0.8.0"} 
+pydantic-ai-slim = {extras = ["openai", "cohere", "vertexai", "google", "anthropic", "groq", "mistral", "bedrock", "huggingface"], version = "~0.8.1"} 
+
+# NOTE: Make sure the following dependencies are not conflicting with pydantic-ai-slim
+openai = ">=1.99.9"
+prompt-toolkit = ">=3"
+rich = ">=13"
+mcp = ">1.12.3"
+requests = "^2.32.2"
 
 tiktoken = "^0.8.0"
 playwright = {version = "^1.54.0", optional = true}
