--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,7 @@ playwright = {version = "^1.54.0", optional = true}
 chromadb = {version = "^0.6.3", optional = true}
 markdownify = "^1.2.0"
 pyjwt = "^2.10.1"
+pyyaml = "^6.0.3"
 
 [tool.poetry.extras]
 # poetry install -E rag
