--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "zrb"
-version = "1.21.5"
+version = "1.21.6"
 description = "Your Automation Powerhouse"
 authors = ["Go Frendi Gunawan <gofrendiasgard@gmail.com>"]
 license = "AGPL-3.0-or-later"
@@ -39,10 +39,10 @@ exclude = [
 [tool.poetry.dependencies]
 python = ">=3.11.0,<4.0.0"
 python-dotenv = "^1.1.1"
-black = "^25.1.0"
-isort = "^6.0.1"
-libcst = "^1.8.2"
-beautifulsoup4 = "^4.13.4"
+black = "^25.11.0"
+isort = "^7.0.0"
+libcst = "^1.8.6"
+beautifulsoup4 = "^4.14.2"
 pdfplumber = "^0.11.7"
 fastapi = {extras = ["standard"], version = "^0.116.1"}
 python-jose = {extras = ["cryptography"], version = "^3.5.0"}
@@ -50,23 +50,25 @@ ulid-py = "^1.1.0"
 psutil = "^7.0.0"
 
 # NOTE: Look at https://github.com/pydantic/pydantic-ai/blob/main/pydantic_ai_slim/pyproject.toml
-pydantic-ai-slim = "~1.22.0"
+pydantic-ai-slim = "~1.24.0"
 
 # NOTE: Make sure the following dependencies are not conflicting with pydantic-ai-slim
-openai = ">=2.8.0"
+openai = ">=2.8.0"  # From openrouter dependency
 prompt-toolkit = ">=3"
 rich = ">=13"
 mcp = ">1.18.0"
-requests = "^2.32.2"
+requests = "^2.32.5"
 
-tiktoken = "^0.8.0"
-markdownify = "^1.2.0"
+tiktoken = "^0.12.0"
+markdownify = "^1.2.2"
 pyjwt = "^2.10.1"
 pyyaml = "^6.0.3"
 
 # Optional packages
-playwright = {version = "^1.54.0", optional = true}
-chromadb = {version = "^0.6.3", optional = true}
+playwright = {version = "^1.56.0", optional = true}
+chromadb = {version = "^1.3.5", optional = true}
+
+# NOTE: Make sure the following dependencies are not conflicting with pydantic-ai-slim
 cohere = {version = ">=5.18.0", optional = true}
 google-auth = {version = ">=2.36.0", optional = true}
 google-genai = {version = ">=1.51.0", optional = true}
