--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "zrb"
-version = "1.21.9"
+version = "1.21.10"
 description = "Your Automation Powerhouse"
 authors = ["Go Frendi Gunawan <gofrendiasgard@gmail.com>"]
 license = "AGPL-3.0-or-later"
@@ -50,7 +50,7 @@ ulid-py = "^1.1.0"
 psutil = "^7.0.0"
 
 # NOTE: Look at https://github.com/pydantic/pydantic-ai/blob/main/pydantic_ai_slim/pyproject.toml
-pydantic-ai-slim = "~1.24.0"
+pydantic-ai-slim = "~1.25.1"
 
 # NOTE: Make sure the following dependencies are not conflicting with pydantic-ai-slim
 openai = ">=2.8.0"  # From openrouter dependency
@@ -76,7 +76,7 @@ anthropic = {version = ">=0.70.0", optional = true}
 groq = {version = ">=0.25.0", optional = true}
 mistralai = {version = ">=1.9.10", optional = true}
 boto3 = {version = ">=1.40.14", optional = true}
-huggingface-hub = {version = ">=0.33.5", extras = ["inference"], optional = true}
+huggingface-hub = {version = ">=0.33.5,<1.0.0", extras = ["inference"], optional = true}
 
 [tool.poetry.extras]
 # Install all extras:
