--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,6 +77,7 @@ groq = {version = ">=0.25.0", optional = true}
 mistralai = {version = ">=1.9.11", optional = true}
 boto3 = {version = ">=1.42.14", optional = true}
 huggingface-hub = {version = ">=0.33.5,<1.0.0", extras = ["inference"], optional = true}
+pyperclip = "^1.11.0"
 
 [tool.poetry.extras]
 # Install all extras:
