--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "zrb"
-version = "2.0.9"
+version = "2.0.10"
 description = "Your Automation Powerhouse"
 authors = ["Go Frendi Gunawan <gofrendiasgard@gmail.com>"]
 license = "AGPL-3.0-or-later"
@@ -44,19 +44,19 @@ isort = "^7.0.0"
 libcst = "^1.8.6"
 beautifulsoup4 = "^4.14.2"
 pdfplumber = "^0.11.7"
-fastapi = {extras = ["standard"], version = "^0.123.9"}
+fastapi = {extras = ["standard"], version = "^0.123.10"}
 python-jose = {extras = ["cryptography"], version = "^3.5.0"}
 ulid-py = "^1.1.0"
 psutil = "^7.0.0"
 
 # NOTE: Look at https://github.com/pydantic/pydantic-ai/blob/main/pydantic_ai_slim/pyproject.toml
-pydantic-ai-slim = "~1.42.0"
+pydantic-ai-slim = "~1.48.0"
 
 # NOTE: Make sure the following dependencies are not conflicting with pydantic-ai-slim
 openai = ">=2.11.0"
 prompt-toolkit = ">=3"
 rich = ">=13"
-mcp = ">1.18.0"
+mcp = ">1.25.0,<2.0"
 requests = "^2.32.5"
 
 tiktoken = "^0.12.0"
@@ -100,7 +100,7 @@ huggingface = ["huggingface-hub"]
 all = ["chromadb", "playwright", "cohere", "google-auth", "google-genai", "anthropic", "groq", "mistral", "bedrock", "huggingface"]
 
 [tool.poetry.group.dev.dependencies]
-alembic = "^1.16.4" # FastApp dependencies
+alembic = "^1.18.2" # FastApp dependencies
 autopep8 = "^2.3.2"
 flake8 = "^7.2.0"
 pytest = "^8.3.5"
