--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ exclude = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.11.0,<4.0.0"
+python = ">=3.11.0,<3.14.0"
 python-dotenv = "^1.1.1"
 black = "^25.11.0"
 isort = "^7.0.0"
@@ -50,7 +50,7 @@ ulid-py = "^1.1.0"
 psutil = "^7.0.0"
 
 # NOTE: Look at https://github.com/pydantic/pydantic-ai/blob/main/pydantic_ai_slim/pyproject.toml
-pydantic-ai-slim = "~1.55.0"
+pydantic-ai-slim = "~1.57.0"
 
 # NOTE: Make sure the following dependencies are not conflicting with pydantic-ai-slim
 openai = ">=2.11.0"
@@ -72,11 +72,14 @@ chromadb = {version = "^1.3.5", optional = true}
 cohere = {version = ">=5.18.0", optional = true}
 google-auth = {version = ">=2.36.0", optional = true}
 google-genai = {version = ">=1.56.0", optional = true}
-anthropic = {version = ">=0.75.0", optional = true}
+anthropic = {version = ">=0.78.0", optional = true}
+xai-sdk = {version = ">=1.5.0", optional = true}
 groq = {version = ">=0.25.0", optional = true}
 mistralai = {version = ">=1.9.11", optional = true}
 boto3 = {version = ">=1.42.14", optional = true}
 huggingface-hub = {version = ">=0.33.5,<1.0.0", extras = ["inference"], optional = true}
+voyageai = {version = ">=0.3.2", optional = true}
+
 pyperclip = "^1.11.0"
 
 [tool.poetry.extras]
@@ -94,10 +97,12 @@ vertexai = ["google-auth"]
 google = ["google-genai"]
 anthropic = ["anthropic"]
 groq = ["groq"]
+xai = ["xai-sdk"]
 mistral = ["mistralai"]
 bedrock = ["boto3"]
 huggingface = ["huggingface-hub"]
-all = ["chromadb", "playwright", "cohere", "google-auth", "google-genai", "anthropic", "groq", "mistral", "bedrock", "huggingface"]
+voyageai = ["voyageai"]
+all = ["chromadb", "playwright", "cohere", "google-auth", "google-genai", "anthropic", "groq", "mistral", "bedrock", "huggingface", "xai", "voyageai"]
 
 [tool.poetry.group.dev.dependencies]
 alembic = "^1.18.2" # FastApp dependencies
